--- a/examples/examples-browser/package.json
+++ b/examples/examples-browser/package.json
@@ -5,6 +5,7 @@
   "author": "justadudewhohacks",
   "license": "MIT",
   "dependencies": {
+    "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "request": "^2.88.2"
   }
