--- a/examples/examples-browser/package.json
+++ b/examples/examples-browser/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "chart.js": "^2.9.3",
+    "chartjs": "^0.3.24",
     "express": "^4.17.1",
     "request": "^2.88.2"
   }
