--- a/examples/examples-browser/package.json
+++ b/examples/examples-browser/package.json
@@ -8,6 +8,9 @@
     "chart.js": "^2.9.3",
     "chartjs": "^0.3.24",
     "express": "^4.17.1",
+    "natural": "^1.0.1",
+    "nlp": "0.0.0",
+    "node-nlp": "^4.3.0",
     "request": "^2.88.2"
   }
 }
